Added enhanced chat service with all features