@@ -1,21 +1,44 @@
 package com.SpringAI.RAG.service.serviceImpl;
 
-import com.SpringAI.RAG.dto.*;
+import com.SpringAI.RAG.dto.Citation;
+import com.SpringAI.RAG.dto.EnhancedChatResponse;
+import com.SpringAI.RAG.dto.QueryContext;
 import com.SpringAI.RAG.exception.ChatServiceException;
-import com.SpringAI.RAG.helper.*;
+import com.SpringAI.RAG.helper.CitationHelper;
+import com.SpringAI.RAG.helper.PromptTemplateHelper;
+import com.SpringAI.RAG.helper.QueryContextExtractor;
+import com.SpringAI.RAG.helper.QuestionGenerationHelper;
+import com.SpringAI.RAG.helper.SearchStrategyHelper;
+import com.SpringAI.RAG.helper.SourceAttributionHelper;
 import com.SpringAI.RAG.service.EnhancedChatService;
 import com.SpringAI.RAG.utils.ModerationService;
 import org.springframework.ai.chat.client.ChatClient;
 import org.springframework.ai.document.Document;
+import org.springframework.ai.reader.ExtractedTextFormatter;
+import org.springframework.ai.reader.pdf.PagePdfDocumentReader;
+import org.springframework.ai.reader.pdf.config.PdfDocumentReaderConfig;
+import org.springframework.ai.transformer.splitter.TokenTextSplitter;
 import org.springframework.ai.vectorstore.SearchRequest;
 import org.springframework.ai.vectorstore.VectorStore;
 import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Service;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.core.io.InputStreamResource;
+import org.springframework.core.io.Resource;
+import org.springframework.util.MimeType;
+import org.springframework.web.multipart.MultipartFile;
+import org.springframework.ai.content.Media;
 
 import java.time.LocalDateTime;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.UUID;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 @Service
 public class EnhancedChatServiceImpl implements EnhancedChatService {
@@ -31,6 +54,7 @@ public class EnhancedChatServiceImpl implements EnhancedChatService {
     private final SourceAttributionHelper attributionHelper;
     private final QueryContextExtractor contextExtractor;
     private final SearchStrategyHelper searchStrategy;
+    private final JdbcTemplate jdbcTemplate;
 
     public EnhancedChatServiceImpl(
             ChatClient.Builder chatClientBuilder,
@@ -41,7 +65,7 @@ public class EnhancedChatServiceImpl implements EnhancedChatService {
             QuestionGenerationHelper questionHelper,
             SourceAttributionHelper attributionHelper,
             QueryContextExtractor contextExtractor,
-            SearchStrategyHelper searchStrategy) {
+            SearchStrategyHelper searchStrategy, JdbcTemplate jdbcTemplate) {
         this.chatClient = chatClientBuilder.build();
         this.vectorStore = vectorStore;
         this.moderationService = moderationService;
@@ -51,6 +75,161 @@ public class EnhancedChatServiceImpl implements EnhancedChatService {
         this.attributionHelper = attributionHelper;
         this.contextExtractor = contextExtractor;
         this.searchStrategy = searchStrategy;
+        this.jdbcTemplate = jdbcTemplate;
+    }
+
+    // Non-destructive ingestion, tracking fileBatchId in all chunks for traceability
+    public void initializeVectorStore(MultipartFile file) {
+        UUID batchId = UUID.randomUUID(); // Unique per upload batch
+        try {
+            log.info("Initializing vector store, batchId={}", batchId);
+
+            if (file == null || file.isEmpty()) {
+                log.error("No file provided for vector store initialization, batchId={}", batchId);
+                throw new ChatServiceException("No file provided for vector store initialization");
+            }
+            String fileName = file.getOriginalFilename();
+            String mimeTypeStr = file.getContentType();
+            MimeType mimeType;
+            try {
+                mimeType = (mimeTypeStr != null) ? MimeType.valueOf(mimeTypeStr) : MimeType.valueOf("application/octet-stream");
+            } catch (Exception ex) {
+                log.warn("Invalid MIME type '{}', using default for batchId={}", mimeTypeStr, batchId);
+                mimeType = MimeType.valueOf("application/octet-stream");
+            }
+            Resource resource = new InputStreamResource(file.getInputStream());
+
+            Map<String, Object> metadata = new HashMap<>();
+            metadata.put("filename", fileName != null ? fileName : "Unknown");
+            metadata.put("uploadTimestamp", System.currentTimeMillis());
+            metadata.put("mimeType", mimeType.toString());
+            metadata.put("filesize", file.getSize());
+            metadata.put("fileBatchId", batchId.toString());
+
+            List<Document> textContent = new ArrayList<>();
+            if (mimeType.equals(Media.Format.DOC_PDF)) {
+                PdfDocumentReaderConfig config = PdfDocumentReaderConfig.builder()
+                        .withPageExtractedTextFormatter(new ExtractedTextFormatter.Builder()
+                                .withNumberOfBottomTextLinesToDelete(3)
+                                .withNumberOfTopTextLinesToDelete(3)
+                                .withNumberOfTopPagesToSkipBeforeDelete(0)
+                                .build())
+                        .withPagesPerDocument(1)
+                        .build();
+                PagePdfDocumentReader pdfReader = new PagePdfDocumentReader(resource, config);
+                textContent = pdfReader.get();
+            } else if (mimeType.equals(Media.Format.DOC_TXT) ||
+                    mimeType.equals(Media.Format.DOC_MD) ||
+                    mimeType.equals(Media.Format.DOC_HTML)) {
+                String content = new String(file.getBytes());
+                metadata.put("detectedUrls", extractUrls(content));
+                textContent = List.of(Document.builder().text(content).metadata(metadata).build());
+            } else {
+                Media media = Media.builder().mimeType(mimeType).data(resource).name(fileName).build();
+                textContent = List.of(Document.builder().media(media).metadata(metadata).build());
+            }
+
+            List<Document> enhancedDocs = new ArrayList<>();
+            for (Document doc : textContent) {
+                Map<String, Object> docMeta = new HashMap<>(doc.getMetadata() != null ? doc.getMetadata() : metadata);
+                docMeta.put("fileBatchId", batchId.toString());
+                String txt = doc.getText();
+                if (txt != null && !txt.isEmpty()) {
+                    List<String> urls = extractUrls(txt);
+                    if (!urls.isEmpty()) {
+                        docMeta.put("detectedUrls", urls);
+                    }
+                }
+                enhancedDocs.add(Document.builder()
+                        .text(txt)
+                        .media(doc.getMedia())
+                        .metadata(docMeta)
+                        .build());
+            }
+
+            TokenTextSplitter textSplitter = new TokenTextSplitter();
+            List<Document> splits = textSplitter.apply(enhancedDocs);
+            vectorStore.accept(splits);
+
+            log.info("Vector store updated for file '{}' with batchId={}", fileName, batchId);
+        } catch (Exception e) {
+            log.error("Vector store init failed, file: '{}', error: {}", file != null ? file.getOriginalFilename() : "null", e.getMessage(), e);
+            throw new ChatServiceException("Vector store initialization failed", e);
+        }
+    }
+
+    // Use for multi-file batches: always pass same batchId for group consistency
+    public List<Document> buildDocumentsFromFiles(List<MultipartFile> files, UUID batchId) {
+        List<Document> docs = new ArrayList<>();
+        if (files == null || files.isEmpty()) {
+            log.warn("No files provided for document building, batchId={}", batchId);
+            return docs;
+        }
+
+        for (MultipartFile file : files) {
+            if (file == null) {
+                log.warn("Encountered null file in upload list; skipping, batchId={}", batchId);
+                continue;
+            }
+            try {
+                String fileName = file.getOriginalFilename();
+                String mimeTypeStr = file.getContentType();
+                MimeType mimeType;
+                try {
+                    mimeType = (mimeTypeStr != null) ? MimeType.valueOf(mimeTypeStr) : MimeType.valueOf("application/octet-stream");
+                } catch (Exception ex) {
+                    log.warn("Invalid detected mimeType '{}' for file '{}'; using default, batchId={}", mimeTypeStr, fileName, batchId);
+                    mimeType = MimeType.valueOf("application/octet-stream");
+                }
+
+                Resource resource = new InputStreamResource(file.getInputStream());
+
+                Map<String, Object> metadata = new HashMap<>();
+                metadata.put("filename", fileName != null ? fileName : "unknown");
+                metadata.put("uploadTimestamp", System.currentTimeMillis());
+                metadata.put("mimeType", mimeType.toString());
+                metadata.put("filesize", file.getSize());
+                metadata.put("fileBatchId", batchId.toString());
+
+                Document doc;
+                if (mimeType.equals(Media.Format.DOC_TXT) || mimeType.equals(Media.Format.DOC_MD) || mimeType.equals(Media.Format.DOC_HTML)) {
+                    String textContent = null;
+                    try {
+                        textContent = new String(file.getBytes());
+                    } catch (Exception ex) {
+                        log.warn("Failed to read text from '{}', batchId={}, error={}", fileName, batchId, ex.getMessage());
+                    }
+                    if (textContent != null) {
+                        metadata.put("detectedUrls", extractUrls(textContent));
+                        doc = Document.builder().text(textContent).metadata(metadata).build();
+                    } else {
+                        doc = Document.builder().media(Media.builder().mimeType(mimeType).data(resource).name(fileName).build()).metadata(metadata).build();
+                    }
+                } else {
+                    doc = Document.builder().media(
+                                    Media.builder().mimeType(mimeType).data(resource).name(fileName).build())
+                            .metadata(metadata)
+                            .build();
+                }
+
+                docs.add(doc);
+                log.info("Added document: {} ({} bytes, mime={}, batchId={})", fileName, file.getSize(), mimeType, batchId);
+
+            } catch (Exception e) {
+                log.error("Failed to process file '{}', batchId={}, error={}", file != null ? file.getOriginalFilename() : null, batchId, e.getMessage(), e);
+            }
+        }
+        return docs;
+    }
+
+    private List<String> extractUrls(String text) {
+        List<String> urls = new ArrayList<>();
+        String urlRegex = "(https?://[\\w\\-._~:/?\\[\\]@!$&'()*+,;=%]+)";
+        Matcher matcher = Pattern.compile(urlRegex).matcher(text);
+        while (matcher.find()) {
+            urls.add(matcher.group());
+        }
+        return urls;
     }
 
     @Override
@@ -61,24 +240,16 @@ public class EnhancedChatServiceImpl implements EnhancedChatService {
         log.info("[{}] Chat query: '{}'", sessionId, question);
 
         try {
-            // Step 1: Content moderation
             moderationService.validate(question);
 
-            // Step 2: Extract query context using LLM
             QueryContext queryContext = contextExtractor.extractContext(question);
-            log.info("[{}] Query context: category={}, specificity={}, priority={}",
-                    sessionId, queryContext.getCategory(),
-                    queryContext.getSpecificity(), queryContext.getPriority());
+            log.info("[{}] Query context: category={}, specificity={}, priority={}", sessionId, queryContext.getCategory(), queryContext.getSpecificity(), queryContext.getPriority());
 
-            // Step 3: Create advanced search request based on context
             SearchRequest searchRequest = searchStrategy.createAdvancedSearchRequest(question, queryContext);
-            log.debug("[{}] Search config: topK={}, threshold={}",
-                    sessionId, searchRequest.getTopK(), searchRequest.getSimilarityThreshold());
+            log.debug("[{}] Search config: topK={}, threshold={}", sessionId, searchRequest.getTopK(), searchRequest.getSimilarityThreshold());
 
-            // Step 4: Execute vector search
             List<Document> documents = vectorStore.similaritySearch(searchRequest);
 
-            // Step 5: Fallback strategy if no results
             if ((documents == null || documents.isEmpty()) && queryContext.hasCategory()) {
                 log.warn("[{}] Primary search returned no results, trying fallback", sessionId);
                 SearchRequest fallbackRequest = searchStrategy.createFallbackSearchRequest(question);
@@ -89,29 +260,34 @@ public class EnhancedChatServiceImpl implements EnhancedChatService {
 
             if (!hasDocuments) {
                 log.warn("[{}] No relevant documents found after fallback", sessionId);
-                return buildGeneralKnowledgeResponse(question, sessionId, queryContext);
+                return buildGeneralKnowledgeResponse(question, sessionId);
             }
 
-            // Step 6: Extract citations and build context
             List<Citation> citations = citationHelper.extractCitations(documents);
             double confidence = citationHelper.calculateConfidence(citations);
             String docContext = citationHelper.buildContext(documents);
 
-            log.info("[{}] Retrieved {} documents with avg confidence {:.2f}",
-                    sessionId, documents.size(), confidence);
+            if (citations.isEmpty()) {
+                log.warn("[{}] CitationHelper returned no citations; creating fallback citation from documents", sessionId);
+                Citation fallback = createGeneratedCitation("Documents (generated)",
+                        summarizeForCitation(docContext, 400),
+                        0.5,
+                        "No citations extracted from documents; created fallback from document text");
+                citations = List.of(fallback);
+                confidence = fallback.getRelevanceScore();
+            }
 
-            // Step 7: Generate answer
+            log.info("[{}] Retrieved {} documents with avg confidence {}", sessionId, documents.size(), String.format("%.2f", confidence));
+
             String answer = generateAnswer(question, docContext, queryContext);
 
-            // Step 8: Determine source attribution
             String attribution = attributionHelper.determineAttribution(answer);
 
-            // Step 9: Generate related questions
             List<String> relatedQuestions = questionHelper.generateRelated(question, answer);
 
             final long duration = System.currentTimeMillis() - startTime;
-            log.info("[{}] Response generated in {}ms | Confidence: {:.2f} | Source: {} | Citations: {}",
-                    sessionId, duration, confidence, attribution, citations.size());
+            log.info("[{}] Response generated in {}ms | Confidence: {} | Source: {} | Citations: {}",
+                    sessionId, duration, String.format("%.2f", confidence), attribution, citations.size());
 
             return EnhancedChatResponse.builder()
                     .answer(answer)
@@ -131,13 +307,11 @@ public class EnhancedChatServiceImpl implements EnhancedChatService {
     }
 
     private String generateAnswer(String question, String docContext, QueryContext queryContext) {
-        // Enhanced prompt with query context awareness
         var prompt = promptHelper.createContextAwarePrompt(question, docContext, queryContext);
         return chatClient.prompt(prompt).call().content();
     }
 
-    private EnhancedChatResponse buildGeneralKnowledgeResponse(String question, String sessionId, QueryContext queryContext) {
-
+    private EnhancedChatResponse buildGeneralKnowledgeResponse(String question, String sessionId) {
         log.info("[{}] Building general knowledge response", sessionId);
 
         var prompt = promptHelper.createGeneralKnowledgePrompt(question);
@@ -145,20 +319,47 @@ public class EnhancedChatServiceImpl implements EnhancedChatService {
 
         List<String> faqSuggestions = questionHelper.generateFAQSuggestions(vectorStore);
 
-        String finalAnswer = answer + "\n\n---\n📋 Questions I can answer from documents:\n" +
+        String finalAnswer = answer + "\n\n---\n Questions I can answer from documents:\n" +
                 faqSuggestions.stream()
                         .map(q -> "• " + q)
                         .reduce("", (a, b) -> a + "\n" + b);
 
+        Citation generatedCitation = createGeneratedCitation("LLM - general knowledge",
+                summarizeForCitation(answer, 400),
+                0.3,
+                "Generated citation for general knowledge answer when no documents are available");
+
         return EnhancedChatResponse.builder()
                 .answer(finalAnswer)
-                .citations(Collections.emptyList())
+                .citations(List.of(generatedCitation))
                 .confidenceScore(0.0)
                 .sourceAttribution("general-knowledge")
                 .suggestedQuestions(faqSuggestions)
                 .followUpPrompt(promptHelper.buildFollowUpPrompt())
                 .timestamp(LocalDateTime.now())
                 .sessionId(sessionId)
+                .build();
+    }
+
+    private String summarizeForCitation(String text, int maxChars) {
+        if (text == null || text.isEmpty()) return "[No text available]";
+        String trimmed = text.trim();
+        if (trimmed.length() <= maxChars) return trimmed;
+        return trimmed.substring(0, maxChars) + "...";
+    }
+
+    private Citation createGeneratedCitation(String source, String textPreview, Double score, String reason) {
+        Map<String, Object> metadata = new HashMap<>();
+        metadata.put("generatedBy", "LLM");
+        metadata.put("reason", reason);
+        metadata.put("generatedAt", LocalDateTime.now().toString());
+
+        return Citation.builder()
+                .passageText(textPreview != null ? textPreview : "[no excerpt]")
+                .documentSource(source)
+                .pageNumber(null)
+                .relevanceScore(score)
+                .metadata(metadata)
                 .build();
     }
 }
